css/style.css
/*
 * Base structure (Bootstrap Dashboard Example Code)
 */

/* Move down content because we have a fixed navbar that is 50px tall */
body {
  padding-top: 50px;
}


/*
 * Global add-ons
 */

.sub-header {
  padding-bottom: 10px;
  border-bottom: 1px solid #eee;
}


/*
 * Sidebar
 */

/* Hide for mobile, show later */
.sidebar {
  /*display: none;*/
}
@media (min-width: 768px) {
  .sidebar {
    position: fixed;
    top: 51px;
    bottom: 0;
    left: 0;
    z-index: 1000;
    display: block;
    padding: 20px;
    overflow-x: hidden;
    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
    background-color: #f5f5f5;
    border-right: 1px solid #eee;
  }
}

/* Sidebar navigation */
.nav-sidebar {
  margin-right: -21px; /* 20px padding + 1px border */
  margin-bottom: 20px;
  margin-left: -20px;
}
.nav-sidebar > li > a {
  padding-right: 20px;
  padding-left: 20px;
}
.nav-sidebar > .active > a {
  color: #fff;
  background-color: #428bca;
}


/*
 * Main content
 */

.main {
  padding: 20px;
  width:100%;
  margin:auto;
}
/*
@media (min-width: 768px) {
  .main {
    padding-right: 0px;
    padding-left: 0px;
  }
}
*/
.main .page-header {
  margin-top: 0;
}

.page-header {
  display:block;
  text-align:center;
}
/*
 * Placeholder dashboard ideas
 */

.placeholders {
  margin-bottom: 30px;
  text-align: center;
}
.placeholders h4 {
  margin-bottom: 0;
}
.placeholder {
  margin-bottom: 20px;
}
.placeholder img {
  display: inline-block;
  border-radius: 50%;
}

/* Additional Code Below = Customized */

#mainHeading {
  color:#999;
  /*height: 50px; */
  padding: 15px 15px;
  font-size:20px;
  line-height: 30px;
}

#dataTableBody
{
  /*display:none;*/
}
#dataTable>tbody>tr>td, .propTable>tbody>tr>td, .propLabel>td{
  white-space:nowrap;
  text-align:center;
  border:1px solid #ddd;
}
#dataTable>thead>tr>th, .propTable>thead>tr>th, .propLabel>th{
  text-align:center;
  vertical-align:middle !important;
  font-size:12px;
}


/* Allow submenus in dropdown */
.dropdown-submenu{
    position:relative;
}
 
.dropdown-submenu > .dropdown-menu
{
    top:0;
    left:100%;
    margin-top:-6px;
    margin-left:-1px;
    -webkit-border-radius:0 6px 6px 6px;
    -moz-border-radius:0 6px 6px 6px;
    border-radius:0 6px 6px 6px;
}
 
.dropdown-submenu:hover > .dropdown-menu{
    display:block;
}
 
.dropdown-submenu > a:after{
    display:block;
    content:" ";
    float:right;
    width:0;
    height:0;
    border-color:transparent;
    border-style:solid;
    border-width:5px 0 5px 5px;
    border-left-color:#cccccc;
    margin-top:5px;
    margin-right:-10px;
}
 
.dropdown-submenu:hover > a:after{
    border-left-color:#ffffff;
}
 
.dropdown-submenu .pull-left{
    float:none;
}
 
.dropdown-submenu.pull-left > .dropdown-menu{
    left:-100%;
    margin-left:10px;
    -webkit-border-radius:6px 0 6px 6px;
    -moz-border-radius:6px 0 6px 6px;
    border-radius:6px 0 6px 6px;
}
/*- See more at: http://firdaus.grandexa.com/2013/09/twitter-bootstrap-3-multilevel-dropdown-menu/#sthash.eG4Kcm2p.dpuf */

/* Custom styles */
.material {
  cursor:pointer;
}

.calcSetup {
  max-width:250px;
  margin:auto;
}

#dropdownMenu {
  width:165px;
  font-size:16px;
  display:block;
  margin:auto;
  margin-top: 7px;
}
#tempBox{
  width:165px;
  margin:auto;
}
#calc {
  display:block;
  margin:auto;
  margin-top:8px;
  margin-bottom:0px;
}
.small-gap {
  display:block;
  content:" ";
  margin:10px 0px;
}

.panel-heading {
  font-size:20px;
  text-align:center;
  padding:3px 0px;
}

.panel {
  margin-top:10px;
}

.table-responsive {
  overflow:scroll;
}

.sidebar {
  max-width:145px;
  padding-right:8px;
  padding-left:8px;
}

.formText {

}

/* Show the user the valid range of temps*/
#tempRangeDisplay {
  display:block; /* Don't show until material is selected */
  text-align:center;
  font-size:20px;
  color:#555;
  margin-bottom:8px;
  margin-top:8px;
}
#tempRange {
  font-weight:bold;
  font-size:1.1em;
}
#matSelector {
  margin-bottom:5px;
}
.dropdown-menu>li>a {
  padding: 6px 20px;
  font-size:16px;
}
#clearTable, .backToTop {
  float:left;
  cursor:pointer;
  color:#428BCA;
  font-size:16px;
  padding-top:3px;
  padding-left:10px;
  font-style: normal;
  font-weight: normal;
}
#clearTable:hover, .backToTop:hover {
  text-decoration:underline;
}
#clearTable:active, .backToTop:active {
  color:#FF4444;
}
.selected
{
  background-color:#FF9999;
}
.active>a:hover {
  /*background-color:#62abea !important; */
}
.matLabel {
  text-align:center;
  font-style:italic;
  font-weight:bold;
  font-size:18px;
}
.appendixTable {
  margin-top:50px; 
}
#selectMaterial{
  width:100%;
  text-align:center;
  margin-bottom:-20px;
}
.selectList {
  vertical-align:top;
  padding-left:20px;
  padding-right:20px;
  display:inline-block;
  font-size:18px;
  font-weight:bold;
}
.selectList>a {
  color:#000;
}
.selectList>a:hover {
  text-decoration:underline;
}
.selectList>li {
  font-size:14px;
  text-align:left;
  text-decoration:none !important;
  list-style-type:none;
}

.selectList>li>a:hover {
  color:#62abea !important;
}
.selectList>li>a:active {
  color:#FF4444 !important;
}

.selectList>hr {
  border-color:#ddd;
  margin:0px;
  padding-bottom:8px;
}
.target {
  padding-top:60px;
  margin-top:-60px;
  width:1px;
  display:inline-block;
}
.cursor {
  cursor:pointer;
}

/* Styles for About pop-up */
#aboutHeader {
  text-align:center;
}
#progTitle, #helpTitle{
  text-align:center;
  font-size:36px;
  margin-bottom:0px;
}
#progVersion{
  text-align:center;
  margin-top:5px;
  font-size:16px;
  font-style:italic;
  color:#666;
}
#progAuthor {
  text-align:center;
  margin-top:35px;
  margin-bottom:0px;
}
#progDate {
  margin-top:5px;
  font-size:16px;
  text-align:center;
  color:#666;
}
#progDescription {
  padding:10px;
}
#features {
  width:100%;
  margin:auto;
  display:block;
}
#progDescription ul {
  font-weight:bold;
  font-size:14px;
}
#progDescription ul li {
  font-weight:normal;
  font-size:14px;
}
#progDescription ol {
  margin-bottom:15px;
}
#aboutText .modal-content {
}

